--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
   </header>
 
-  <div class="page-hero bg-image overlay-dark" style="background-image: url"assets/img/bg_banner1.jpg);">
+  <div class="page-hero bg-image overlay-dark" style="background-image: url(assets/img/bg_banner1.jpg);">
     <div class="hero-section">
       <div class="container text-center wow zoomIn">
         <span class="subhead">Let's make your life happier</span>
@@ -343,12 +343,10 @@
             <textarea name="message" id="message" class="form-control" rows="6" placeholder="Enter message.."></textarea>
           </div>
         </div>
-
         <button type="submit" class="btn btn-primary mt-3 wow zoomIn">Submit Request</button>
       </form>
     </div>
   </div> <!-- .page-section -->
-
 
   <footer class="page-footer">
     <div class="container">
