--- a/about.html
+++ b/about.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="copyright" content="">
   <title>PT. GRAHA KENCANA ADHIPERKASA RAYA</title>
-  <link rel="stylesheet" href="../assets/css/maicons.css">
-  <link rel="stylesheet" href="../assets/css/bootstrap.css">
-  <link rel="stylesheet" href="../assets/vendor/owl-carousel/css/owl.carousel.css">
-  <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
-  <link rel="stylesheet" href="../assets/css/theme.css">
+  <link rel="stylesheet" href="./assets/css/maicons.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/vendor/owl-carousel/css/owl.carousel.css">
+  <link rel="stylesheet" href="./assets/vendor/animate/animate.css">
+  <link rel="stylesheet" href="./assets/css/theme.css">
 </head>
 <body>
 
@@ -33,7 +33,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="about.html">About Us</a>
@@ -49,10 +49,10 @@
       </div> <!-- .container -->
     </nav>
   </header>
-
-  <div class="page-banner overlay-dark bg-image" style="background-image: url(../assets/img/bg_banner1.jpg);">
+  
+  <div class="page-banner overlay-dark bg-image" style="background-image: url(./assets/img/bg_banner3.jpg);">
     <div class="banner-section">
-      <div class="container text-center wow fadeInUp">
+      <div class="container text-center wow zoomIn">
         <nav aria-label="Breadcrumb">
           <ol class="breadcrumb breadcrumb-dark bg-transparent justify-content-center py-0 mb-2">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -64,41 +64,11 @@
     </div> <!-- .banner-section -->
   </div> <!-- .page-banner -->
 
-  <div class="page-section bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 py-3 wow zoomIn">
-          <div class="card-service">
-            <div class="circle-shape bg-secondary text-white">
-              <span class="mai-chatbubbles-outline"></span>
-            </div>
-            <p><span>Chat</span> with a instruktur</p>
-          </div>
-        </div>
-        <div class="col-md-4 py-3 wow zoomIn">
-          <div class="card-service">
-            <div class="circle-shape bg-primary text-white">
-              <span class="mai-shield-checkmark"></span>
-            </div>
-            <p><span>One</span>-Health Protection</p>
-          </div>
-        </div>
-        <div class="col-md-4 py-3 wow zoomIn">
-          <div class="card-service">
-            <div class="circle-shape bg-accent text-white">
-              <span class="mai-newspaper"></span>
-            </div>
-            <p><span>One</span>-Strategy Building</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="page-section">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 wow fadeInUp">
+          <img src="./assets/img/ady.jpg" alt="">
           <h1 class="text-center mb-3">Welcome to Your Building Center</h1>
           <div class="text-lg">
             <p>PT. Graha Kencana Adhi Perkasa Raya Merupakan Perseroan Terbatas yang Bergerak dalam Bidang Jasa Konstruksi, dengan Spesifikasi Pada Bidang Layanan Jasa Arsitektural dan Teknik Sipil.</p>
@@ -112,11 +82,7 @@
             <div class="col-md-6 col-lg-4 wow zoomIn">
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_2.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/ady.jpg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Edy Marwanto</p>
@@ -127,11 +93,7 @@
             <div class="col-md-6 col-lg-4 wow zoomIn">
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_1.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/asih.jpeg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Murni Asih</p>
@@ -142,11 +104,7 @@
             <div class="col-md-6 col-lg-4 wow zoomIn">
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_2.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/hari.jpeg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Hari Setyawan</p>
@@ -157,11 +115,7 @@
             <div class="col-md-6 col-lg-4 wow zoomIn">
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_2.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/raka.jpg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Raka Abdul Mustholih</p>
@@ -172,11 +126,7 @@
             <div class="col-md-6 col-lg-4 wow zoomIn">
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_1.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/siti.jpg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Siti Nurjannah</p>
@@ -187,45 +137,33 @@
             <div class="col-md-6 col-lg-4 wow zoomIn">
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_2.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/teguh.jpeg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Teguh Wiyonoh</p>
-                  <span class="text-sm text-grey">Manager proyek </span>
+                  <span class="text-sm text-grey">Manager Proyek </span>
                 </div>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 wow zoomIn">
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_2.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/aditya.jpeg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Aditya Kresna Pratama</p>
-                  <span class="text-sm text-grey">Pelaksana proyek</span>
+                  <span class="text-sm text-grey">Pelaksana Proyek</span>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 wow zoomIn">
+            <div>
               <div class="card-doctor">
                 <div class="header">
-                  <img src="../assets/img/doctors/doctor_2.jpg" alt="">
-                  <div class="meta">
-                    <a href="#"><span class="mai-call"></span></a>
-                    <a href="#"><span class="mai-logo-whatsapp"></span></a>
-                  </div>
+                  <img src="./assets/img/charis.jpeg" alt="">
                 </div>
                 <div class="body">
                   <p class="text-xl mb-0">Muh. Charis Fanani</p>
-                  <span class="text-sm text-grey">Pelaksana proyek</span>
+                  <span class="text-sm text-grey">Pelaksana Proyek</span>
                 </div>
               </div>
             </div>
@@ -239,45 +177,24 @@
   <footer class="page-footer">
     <div class="container">
       <div class="row px-md-3">
-        <div class="col-sm-6 col-lg-3 py-3">
+        <div class="col-sm-6 col-lg-4 py-3">
           <h5>Company</h5>
           <ul class="footer-menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Editorial Team</a></li>
-            <li><a href="#">Protection</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <div class="col-sm-6 col-lg-3 py-3">
-          <h5>More</h5>
-          <ul class="footer-menu">
-            <li><a href="#">Terms & Condition</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Advertise</a></li>
-            <li><a href="#">Join as Doctors</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-6 col-lg-3 py-3">
-          <h5>Our partner</h5>
-          <ul class="footer-menu">
-            <li><a href="#">One-building</a></li>
-            <li><a href="#">One-staff</a></li>
-            <li><a href="#">One-Live</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-6 col-lg-3 py-3">
+        <div class="col-sm-6 col-lg-4 py-3">
           <h5>Contact</h5>
-          <p class="footer-link mt-2">Drajidan - Sruni, Musuk, Boyolali Jawa Tengah</p>
-          <a href="#" class="footer-link">0276-322937</a>
-          <a href="#" class="footer-link">pt.grahakencanaadhiperkasaraya@gmail.com</a>
-
-          <h5 class="mt-3">Social Media</h5>
-          <div class="footer-sosmed mt-3">
-            <a href="#" target="_blank"><span class="mai-logo-facebook-f"></span></a>
-            <a href="#" target="_blank"><span class="mai-logo-twitter"></span></a>
-            <a href="#" target="_blank"><span class="mai-logo-google-plus-g"></span></a>
+          <p class="footer">Drajidan - Sruni, Musuk, Boyolali Jawa Tengah</p>
+          <p class="footer">0276-322937</p>
+          <p class="footer">pt.grahakencanaadhiperkasaraya@gmail.com</p>
+        </div>
+        <div class="col-sm-6 col-lg-4 py-3">
+            <h5>Social Media</h5>
+            <div class="footer-sosmed mt-3">
             <a href="#" target="_blank"><span class="mai-logo-instagram"></span></a>
-            <a href="#" target="_blank"><span class="mai-logo-linkedin"></span></a>
           </div>
         </div>
       </div>
@@ -288,15 +205,15 @@
     </div>
   </footer>
 
-<script src="../assets/js/jquery-3.5.1.min.js"></script>
+<script src="./assets/js/jquery-3.5.1.min.js"></script>
 
-<script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="./assets/js/bootstrap.bundle.min.js"></script>
 
-<script src="../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+<script src="./assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
 
-<script src="../assets/vendor/wow/wow.min.js"></script>
+<script src="./assets/vendor/wow/wow.min.js"></script>
 
-<script src="../assets/js/theme.js"></script>
+<script src="./assets/js/theme.js"></script>
   
 </body>
 </html>
